--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title> Valentine's proposal</title>
+    <title>Valentine's proposal</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
             <h1 class="hh" id="name">Cześć misiu pysiu kolorowy!</h1>
             <p class="pp" id="question">Będziesz moją walentynką?</p>
             <div class="buttons">
-                <button id="no-button" onclick="showMessage('Nie')">Nie</button>
-                <button onclick="showMessage('Tak')" id="yesButton">Tak</button>
+                <button id="no-button" onclick="showMessage('Nie')">No</button>
+                <button onclick="showMessage('Tak')" id="yesButton">Yes</button>
             </div>
             <div class="hidden-message" id="no-message">
                 <p>Trochę nie miło!</p>
