--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <button onclick="showMessage('Yes')" id="yesButton">Yes</button>
             </div>
             <div class="hidden-message" id="no-message">
-                <p>Trochę nie miło!</p>
+                <p>Nice try, but you can't escape that easily!</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>Ooooo, słodko. Widzimy się 14 lutego w takim razie, słodziaku <3 1</p>
+                <p>YAY! See you on the 14th, babygirl.</p>
             </div>
         </div>
     </div>
