--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>Troszke nie milo!</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>Oooo, slodko. To widzimy sie 14 lutego mój chłopie</p>
+                <p>Oooo, slodko. To widzimy sie 14 lutego moj chlopie</p>
             </div>
         </div>
     </div>
