--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <button onclick="showMessage('Tak')" id="yesButton">Tak</button>
             </div>
             <div class="hidden-message" id="no-message">
-                <p>Troszke nie milo!</p>
+                <p>Nice try, but you can't escape that easily!</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>Oooo, slodko. To widzimy sie 14 lutego moj chlopie</p>
+                <p>YAY! See you on the 14th, babygirl.</p>
             </div>
         </div>
     </div>
