--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>To tylko dla zmyłki</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>YAY!</p>
+                <p>Jeeeeej, widzimy sie 14 lutego</p>
             </div>
         </div>
     </div>
