--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1 class="hh" id="name">Cześć misiu pysiu kolorowy!</h1>
             <p class="pp" id="question">Będziesz moją walentynką?</p>
             <div class="buttons">
-                <button id="no-button" onclick="showMessage('No')">Nie</button>
-                <button onclick="showMessage('Yes')" id="yesButton">Tak</button>
+                <button id="no-button" onclick="showMessage('No')">No</button>
+                <button onclick="showMessage('Yes')" id="yesButton">Yes</button>
             </div>
             <div class="hidden-message" id="no-message">
                 <p>To tylko dla zmyłki</p>
